Closed Bug 1789974 Opened 2 years ago Closed 2 years ago

The "Private Window" shortcut is no longer pinned to the taskbar

Categories

(Firefox :: Shell Integration, defect, P1)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 --- verified

People

(Reporter: mcoman, Assigned: bhearsum)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [fidedi-pbm])

Attachments

(2 files)

[Notes]:

  • This issue is reproducible if the "Pin Private Window" action is taken from the existing Onboarding modals.

[Affected versions]:

  • Firefox Nightly 106.0a1 - Build ID: 20220908213354

[Affected Platforms]:

  • Windows 10 x64

[Prerequisites]:

  • The "Private Window" shortcut is not pinned to the taskbar.

[Steps to reproduce]:

  1. Open the browser with the profile from the prerequisites.
  2. Open a new "Private Window".
  3. Click the "Pin to taskbar" button and observe the behavior.

[Expected result]:

  • The "Private Window" shortcut is pinned to the taskbar.

[Actual result]:

  • The "Private Window" shortcut is NOT pinned to the taskbar and the following error is displayed in the "Browser Console":

[Exception... "Failure" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "<unknown>" data: no] ShellService.jsm:460 pinToTaskbar resource:///modules/ShellService.jsm:460 AsyncFunctionThrow self-hosted:885

[Regression Window]:

From the pushlog it seems that Bug 1782295 may have caused this regression.

@Ben, could you please take a look over this issue?

[Additional Notes]:

  • This issue is not reproducible with the regular "Firefox" shortcut.
  • Attached a screen recording of the issue.
Flags: needinfo?(bhearsum)

Set release status flags based on info from the regressing bug 1782295

Assignee: nobody → bhearsum
Flags: needinfo?(bhearsum)
Priority: -- → P1
Whiteboard: [fidedi-pbm]

It looks like this is rooted in the same thing as https://bugzilla.mozilla.org/show_bug.cgi?id=1789991, which I will have a fix up for shortly. I did notice a minor secondary issue while testing and verifying this though - I'll provide a patch to fix that as well.

In the recent refactor of this (https://bugzilla.mozilla.org/show_bug.cgi?id=1782295) I managed to break our ability to create shortcuts if they don't already existed. This was caused by two things:

  1. An errant NS_SUCCEEDED call remained after the call it was checking moved elsewhere (oops)
  2. The taskbar pinning code was not updated to set the shortcut file path (required after the refactor).

This patches fixes both of those issues. Note that all the directory service interaction is done on the main thread, because the actual function doing the work is on a background thread, and the directory service does not work there.

Depends on D156992

Pushed by bhearsum@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/63d129263a05 Fix shortcut creation when pinning to taskbar r=bytesized
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch

I have verified that this issue is no longer reproducible with the latest Firefox Nightly (106.0a1 Build ID - 20220914213649) installed on Windows 10 x64. Now, I can confirm that the "Private Window" shortcut is successfully pinned to the taskbar.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: